resolved dropwdown menu being behind elements on allcommands page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ a:hover {
   top: 100%;
   background-color: #8f19df;
   padding: 50px;
+  z-index: 1;
 }
 
 .dropdown-item {
